<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/responseTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_launcher_background"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/view"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="250dp"
            android:layout_marginRight="250dp"
            android:layout_marginTop="-50dp"
            android:background="@color/colorAccent"
            android:drawableLeft="@mipmap/ic_launcher_back"
            android:drawableStart="@mipmap/ic_launcher_back"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/video_viewButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="5dp"
            android:background="?attr/colorButtonNormal"
            android:drawableTop="@mipmap/ic_launcher_camera"
            android:gravity="center"
            android:text="@string/view_camera"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textOff="@string/lock"
            android:textOn="@string/unlock"
            android:thumb="@drawable/customswitchselector"
            android:track="@drawable/costum_track" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="115dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/holo_orange_light"
            android:drawableEnd="@mipmap/ic_launcher_exit_to_app"
            android:drawableRight="@mipmap/ic_launcher_exit_to_app"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
