<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/connection_result_fail"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:background="@android:color/holo_red_light"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/connection_result_fail"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/icon_connect_result"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:srcCompat="@drawable/fail_png"
        android:contentDescription="@string/todo"/>

    <Button
        android:id="@+id/retry_connect"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/retry_to_connect"  />


</LinearLayout>